--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,7 @@
         "chrisboulton/php-resque": "1.2.x",
         "chrisboulton/php-resque-scheduler": "1.1",
         "twilio/sdk": "^4.10",
-        "klein/klein": "v2.0.2" 
+        "klein/klein": "v2.0.2",
+        "norkunas/onesignal-php-api": "0.1" 
     }
 }
